# GestSIS_Alarm

./: .env.docker  .env.example  .flake8  .gitignore  Dockerfile  README.md  _docker-compose.yml  docker-compose.yml  entrypoint.sh  init.py  openapi-schema.yml  passenger_wsgi.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
_scripts/: cron_mail_and_extract.sh  init.py  mail_and_extract.sh
admin_panel/: admin.py  models.py  serializers.py  urls.py  views.py
gestsis_alarm/: .env.example  asgi.py  manage.py  openapi-schema.yml  settings.py  urls.py  wsgi.py
gestsis_alarm/admin_panel/: admin.py  models.py  serializers.py  urls.py  views.py
gestsis_alarm/gestsis_alarm/: asgi.py  settings.py  urls.py
gestsis_alarm/mail_parser/: models.py
gestsis_alarm/mail_parser/fixtures/: sis.json
gestsis_alarm/mail_parser/migrations/: 0001_initial.py  0003_rename_alarm_id_file_alarm_and_more.py  0004_alarm_complement.py  0005_firefighter_unique_firefighter.py  0006_alter_file_filename.py  0007_remove_firefighter_unique_firefighter_and_more.py  0008_rename_gestsis_name_sis_gestsis_key.py  0009_alter_sis_gestsis_key.py  0010_alter_alarm_location_lv95_alter_alarm_location_wgs84.py  0011_alter_sis_gestsis_key_alter_sis_name.py
gestsis_alarm/mail_parser/tasks/: mail_retriever.py  pdf_extraction.py
gestsis_alarm/mail_parser/tests/: test_coordinates.py  (+2 more)
mail_parser/: apps.py  models.py
mail_parser/fixtures/: sis.json
mail_parser/migrations/: 0001_initial.py  0002_group.py  0002_remove_alarm_sis_id_alarm_sis.py  0003_alarm_code_alarm_couleur_alarm_date_creation_and_more.py  0012_alter_sis_options.py
mail_parser/tasks/: mail_retriever.py  pdf_extraction.py
mail_parser/tests/: test_coordinates.py  test_pdf_extraction.py
mail_parser/utils/: lv95_converter.py
(+16 files in other folders)
