[project]
name = "GestSIS_Alarm"
version = "0.1.0"
description = "Module permettant la gestion des alarmes dans GestSIS."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography==46.0.4",
    "django==5.2.11",
    "django-environ==0.12.0",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt[crypto]==5.5.1",
    "mysql-connector-python==9.6.0",
    "mysqlclient==2.2.7",
    "pdfminer-six==20260107",
    "sentry-sdk[django]==2.51.0",
    "sqlparse==0.5.5",
    "unidecode==1.4.0",
]
